k3s-legacy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # This annotation triggers cert-manager to issue a certificate
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: "portfolio-https-redirect@kubernetescrd,portfolio-www-redirect@kubernetescrd"
spec:
  tls:
    - hosts:
        - sumedhvartak.pp.ua
        - www.sumedhvartak.pp.ua
      # cert-manager will create this Secret with the TLS cert and key
      secretName: portfolio-tls
  rules:
    - host: sumedhvartak.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  name: http
    - host: www.sumedhvartak.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  name: http
